# ApplicativeDoMore

./: LICENSE  README.md  applicative-do-more.cabal  flake.nix  hie.yaml
src/: ApplicativeDoMore.hs
