cabal-version:  2.2
name:           applicative-do-more
version:        1.0.0
maintainer:     exclusiveandgate@gmail.com
build-type:     Simple

library
    default-language:   Haskell2010

    hs-source-dirs:     src
    exposed-modules:    ApplicativeDoMore

    default-extensions:
        DataKinds
        ImportQualifiedPost
        LambdaCase
        OverloadedStrings
        TupleSections

    build-depends:
        base    >= 4.12,
        ghc     >= 9.6,
        syb,
        template-haskell

    ghc-options:        -Wall
